# Collection

./: .gitignore  Cargo.toml  Dockerfile  ff  prondb.py  start-site.sh  zellij run layout.kdl  zellij run layout.kdl~
backend/: Cargo.toml  Rocket.toml
backend/data/css/: main.css
backend/data/js/: ch.js
backend/src/: main.rs  main.rs~
ui/: Cargo.toml  index.html
ui/src/: main.rs
ui/src/pages/: home.rs  mod.rs  not_found.rs  player.rs  vid.rs
