[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
#Our common code library
common = {path = "../common"}
#The frontend framework we are going to use
yew = { version = "0.20", features = ["csr"] }
#Yew's routing framework for handling url on the frontend
yew-router = "0.17.0"
#Logging for Debugging
wasm-logger = "0.2.0"
log = "0.4.14"
#A WebAssembly bindgen
web-sys = "0.3.56"
gloo-net = "0.2"
#Reqwasm will be used to send request to the backend
reqwasm = "0.5.0"
#A rust serialization library for interacting data between the backend and frontend
serde = { version = "1.0.133", features = ["derive"] }

regex = "1.9.1"

wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
patternfly-yew = "0.4.1"
rand = "0.8.5"
